libs/ui/kis_file_layer.h
@@ -87,7 +87,7 @@ public:
     void setImage(KisImageWSP image) override;
 
 public Q_SLOTS:
-    void slotLoadingFinished(KisPaintDeviceSP projection, int xRes, int yRes);
+    void slotLoadingFinished(KisPaintDeviceSP projection, qreal xRes, qreal yRes, const QSize &size);
 
 private:
     QString m_basePath;
